feat: 匠物定制 - 安全修复、Bug修复、性能优化、Flutter Web兼容、前端补全
安全修复(CRITICAL):
- 密码SHA-256→BCrypt加密+旧密码自动迁移
- /admin/*管理员角色校验
- CORS从*改为配置白名单
- 验证码Redis频率限制+移除日志泄露
- Redis反序列化类型白名单

安全修复(HIGH):
- RuntimeException→BusinessException替换
- WebSocket CORS从*改为配置白名单
- ContentController路径/admin/content/**
- application.yml初始化模式
- data.sql密码BCrypt哈希
- 管理员登录白名单

Bug修复:
- 评分findByArtisanId→findByProductId
- 内存分页→数据库分页
- N+1查询→SQL聚合
- 订单越权修复
- 订单号Random→ThreadLocalRandom
- AdminService.resolveDispute使用resolution参数
- 枚举@JsonValue返回code而非label

API规范:
- UserController改用@RequestBody
- 新增UpdateUserRequest DTO

前端修复:
- API路径/admin前缀
- 用户状态开关@change绑定
- 争议仲裁handleQuickResolve
- 订单取消功能
- 统计图表API真实数据
- 搜索重置分页
- 新增作品/手作人管理页面
- 404路由
- vite chunk分割优化

Flutter Web兼容:
- 移除所有dart:io导入
- File()→Image.network()
- baseUrl kIsWeb条件判断
- auth_service restoreSession try-catch
- index.html移至项目根目录

性能优化:
- FavoriteService N+1→批量加载
- HistoryService N+1→批量加载

测试:
- 47个测试用例补充