@@ -1,6 +1,5 @@
 package com.jiangwu.service;
 
-import com.jiangwu.entity.Order;
 import com.jiangwu.repository.ArtisanRepository;
 import com.jiangwu.repository.OrderRepository;
 import com.jiangwu.repository.ProductRepository;
@@ -9,16 +8,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
- * 统计数据服务
+ * 统计数据服务（使用 SQL 聚合查询，避免全表加载）
  */
 @Service
 @RequiredArgsConstructor
@@ -36,62 +34,45 @@ public class StatsService {
         Map<String, Object> data = new HashMap<>();
 
         // 用户统计
-        long totalUsers = userRepository.selectCount(null);
-        long todayUsers = userRepository.selectCount(
+        data.put("totalUsers", userRepository.selectCount(null));
+        data.put("todayUsers", userRepository.selectCount(
                 new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.User>()
                         .ge("created_at", LocalDateTime.of(LocalDate.now(), LocalTime.MIN))
                         .eq("deleted", 0)
-        );
-        data.put("totalUsers", totalUsers);
-        data.put("todayUsers", todayUsers);
+        ));
 
         // 订单统计
-        long totalOrders = orderRepository.selectCount(null);
-        long todayOrders = orderRepository.selectCount(
+        data.put("totalOrders", orderRepository.selectCount(null));
+        data.put("todayOrders", orderRepository.selectCount(
                 new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
                         .ge("created_at", LocalDateTime.of(LocalDate.now(), LocalTime.MIN))
                         .eq("deleted", 0)
-        );
-        data.put("totalOrders", totalOrders);
-        data.put("todayOrders", todayOrders);
-
-        // 待审核订单
-        long pendingOrders = orderRepository.selectCount(
+        ));
+        data.put("pendingOrders", orderRepository.selectCount(
                 new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
                         .eq("status", "pending_payment")
                         .eq("deleted", 0)
-        );
-        data.put("pendingOrders", pendingOrders);
+        ));
 
-        // 手作人统计
-        long totalArtisans = artisanRepository.selectCount(null);
-        data.put("totalArtisans", totalArtisans);
+        // 手作人/作品统计
+        data.put("totalArtisans", artisanRepository.selectCount(null));
+        data.put("totalProducts", productRepository.selectCount(null));
 
-        // 作品统计
-        long totalProducts = productRepository.selectCount(null);
-        data.put("totalProducts", totalProducts);
+        // 总交易额（使用 SQL SUM，不再全表加载）
+        data.put("totalRevenue", orderRepository.sumCompletedRevenue());
 
-        // 总交易额（已完成订单）
-        com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order> revenueWrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<>();
-        revenueWrapper.eq("status", "completed").eq("deleted", 0);
-        BigDecimal totalRevenue = orderRepository.selectList(revenueWrapper).stream()
-                .map(Order::getTotalAmount)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        data.put("totalRevenue", totalRevenue);
-
-        // 待办事项（待处理订单）
-        com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order> todoWrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<>();
-        todoWrapper.eq("status", "pending_payment").eq("deleted", 0)
-                .orderByDesc("created_at");
-        todoWrapper.last("LIMIT 5");
-        List<Map<String, String>> todoList = orderRepository.selectList(todoWrapper).stream()
-                .map(o -> Map.of(
-                        "type", "待处理订单",
-                        "content", "订单号: " + o.getOrderNo(),
-                        "time", o.getCreatedAt() != null ? o.getCreatedAt().toString() : ""
-                ))
-                .collect(Collectors.toList());
-        data.put("todoList", todoList);
+        // 待办事项
+        data.put("todoList", orderRepository.selectList(
+                new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
+                        .eq("status", "pending_payment")
+                        .eq("deleted", 0)
+                        .orderByDesc("created_at")
+                        .last("LIMIT 5")
+        ).stream().map(o -> Map.<String, String>of(
+                "type", "待处理订单",
+                "content", "订单号: " + o.getOrderNo(),
+                "time", o.getCreatedAt() != null ? o.getCreatedAt().toString() : ""
+        )).toList());
 
         return data;
     }
@@ -102,28 +83,18 @@ public class StatsService {
     public Map<String, Object> getTransactionStats(String startDate, String endDate) {
         Map<String, Object> data = new HashMap<>();
 
-        // 查询已完成订单的总金额
-        com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order> wrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<>();
-        wrapper.eq("status", "completed").eq("deleted", 0);
-        BigDecimal totalAmount = orderRepository.selectList(wrapper).stream()
-                .map(Order::getTotalAmount)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        data.put("totalAmount", totalAmount);
-
-        // 查询今日已完成订单金额
-        com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order> todayWrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<>();
-        todayWrapper.eq("status", "completed").eq("deleted", 0)
-                .ge("created_at", LocalDateTime.of(LocalDate.now(), LocalTime.MIN));
-        BigDecimal todayAmount = orderRepository.selectList(todayWrapper).stream()
-                .map(Order::getTotalAmount)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        data.put("todayAmount", todayAmount);
+        // 使用 SQL SUM 聚合查询
+        data.put("totalAmount", orderRepository.sumCompletedRevenue());
+        data.put("todayAmount", orderRepository.sumCompletedRevenueFrom(
+                LocalDateTime.of(LocalDate.now(), LocalTime.MIN)));
 
         // 订单数量
-        long orderCount = orderRepository.selectCount(new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>().eq("deleted", 0));
-        long completedCount = orderRepository.selectCount(wrapper);
-        data.put("orderCount", orderCount);
-        data.put("completedCount", completedCount);
+        var completedWrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
+                .eq("status", "completed").eq("deleted", 0);
+        data.put("orderCount", orderRepository.selectCount(
+                new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
+                        .eq("deleted", 0)));
+        data.put("completedCount", orderRepository.selectCount(completedWrapper));
 
         return data;
     }
@@ -134,7 +105,7 @@ public class StatsService {
     public Map<String, Object> getUserStats(String startDate, String endDate) {
         Map<String, Object> data = new HashMap<>();
 
-        // 新增用户数
+        // 新增用户数（近30天）
         long newUsers = userRepository.selectCount(
                 new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.User>()
                         .ge("created_at", LocalDateTime.of(LocalDate.now().minusDays(30), LocalTime.MIN))
@@ -142,7 +113,7 @@ public class StatsService {
         );
         data.put("newUsers", newUsers);
 
-        // 活跃用户数（有登录记录）
+        // 活跃用户数
         long activeUsers = userRepository.selectCount(
                 new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.User>()
                         .isNotNull("last_login_at")
@@ -154,19 +125,19 @@ public class StatsService {
         long totalUsers = userRepository.selectCount(null);
         data.put("totalUsers", totalUsers);
 
-        // 留存率（简化计算）
+        // 留存率
         double retentionRate = totalUsers > 0 ? (double) activeUsers / totalUsers * 100 : 0;
         data.put("retentionRate", Math.round(retentionRate * 10.0) / 10.0);
 
-        // 平均订单金额
-        com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order> avgWrapper = new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<>();
-        avgWrapper.eq("status", "completed").eq("deleted", 0);
-        BigDecimal totalAmount = orderRepository.selectList(avgWrapper).stream()
-                .map(Order::getTotalAmount)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        long completedOrders = orderRepository.selectCount(avgWrapper);
-        double avgOrderAmount = completedOrders > 0 ? totalAmount.doubleValue() / completedOrders : 0;
-        data.put("avgOrderAmount", Math.round(avgOrderAmount * 100.0) / 100.0);
+        // 平均订单金额（使用 SQL SUM）
+        BigDecimal totalAmount = orderRepository.sumCompletedRevenue();
+        long completedOrders = orderRepository.selectCount(
+                new com.baomidou.mybatisplus.core.conditions.query.QueryWrapper<com.jiangwu.entity.Order>()
+                        .eq("status", "completed").eq("deleted", 0));
+        double avgOrderAmount = completedOrders > 0
+                ? totalAmount.divide(BigDecimal.valueOf(completedOrders), 2, RoundingMode.HALF_UP).doubleValue()
+                : 0;
+        data.put("avgOrderAmount", avgOrderAmount);
 
         return data;
     }
